--- a/templates/base.html
+++ b/templates/base.html
@@ -4,24 +4,25 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="/static/css/style.css" />
     <title>{{title}}</title>
 </head>
   <body>
     <header>
-      <nav class="navbar navbar-light bg-light">
-        <a class="navbar-brand" href="#">Наше приложение</a>
-  <ul>
-    <li><a href="/">Home</a></li>
-    <li><a href="#news">Новые публикации</a></li>
-    <li><a href="/introduction">Ознакомление с сообществом</a></li>
-  </ul>
+      <nav class="navbar navbar-dark bg-dark">
+        <a href="/" style="margin-left: 30px"><font size="5" face="Trebuchet MS" color="white">На главную</font></a>
+        <div>
+          <a class="navbar-brand" href="/about">Ознакомление с сообществом</a>
+        </div>
+
+
           {% if current_user.is_authenticated %}
     <a class="navbar-brand" href="/logout">
         {{ current_user.name }}</a>
             {% else %}
         <p>
-        <a class="btn btn-primary " href="/register">Зарегистрироваться</a>
-        <a class="btn btn-primary" href="/login">Войти</a>
+        <a class="btn btn-secondary " href="/register">Зарегистрироваться</a>
+        <a class="btn btn-secondary" href="/login">Войти</a>
     </p>
 {% endif %}
       </nav>
