--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Авторизация</h1>
+    <h1 style="padding-top:40px;padding-bottom:40px">Авторизация</h1>
     <form action="" method="post">
         {{ form.hidden_tag() }}
         <p>
